[gd_scene load_steps=5 format=3 uid="uid://cepubkx3pi1y5"]

[ext_resource type="Script" path="res://scripts/UI/menu_manager.gd" id="1_4hvhr"]
[ext_resource type="Texture2D" uid="uid://d2fn801bsa60x" path="res://sprites/environment/Space_Backgrounds/Blue Nebula/Blue_Nebula_02-512x512.png" id="2_rhknb"]
[ext_resource type="Theme" uid="uid://q5cognvpljim" path="res://Assets/UI_theme.tres" id="4_tayfy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vagxe"]
texture = ExtResource("2_rhknb")

[node name="LevelSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hvhr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00137, 1)
theme_override_styles/panel = SubResource("StyleBoxTexture_vagxe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -204.0
offset_right = 116.0
offset_bottom = -100.0
grow_vertical = 2
scale = Vector2(1.98228, 1.98228)
size_flags_horizontal = 4

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(116, 23)
layout_mode = 2
theme = ExtResource("4_tayfy")
text = "Back"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -128.0
offset_right = 79.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.98228, 1.98228)
pivot_offset = Vector2(66, 23.5)
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="LevelLabel" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_tayfy")
theme_override_font_sizes/font_size = 14
text = "Planet 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_tayfy")
text = "Start"

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_top = 34.0
offset_right = 231.0
offset_bottom = 50.0
scale = Vector2(3, 3)
theme = ExtResource("4_tayfy")
text = "Level Select"
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/StartButton" to="." method="_on_start_button_pressed"]
