[gd_scene load_steps=7 format=3 uid="uid://icex1rosse4b"]

[ext_resource type="Script" path="res://scripts/UI/menu_manager.gd" id="1_t68ln"]
[ext_resource type="Texture2D" uid="uid://d2fn801bsa60x" path="res://sprites/environment/Space_Backgrounds/Blue Nebula/Blue_Nebula_02-512x512.png" id="2_w033s"]
[ext_resource type="PackedScene" uid="uid://dxb8g0cbxxokj" path="res://scenes/player.tscn" id="3_bs5il"]
[ext_resource type="Theme" uid="uid://q5cognvpljim" path="res://Assets/UI_theme.tres" id="3_n1t7p"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vagxe"]
texture = ExtResource("2_w033s")

[sub_resource type="LabelSettings" id="LabelSettings_xpjht"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t68ln")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00137, 1)
theme_override_styles/panel = SubResource("StyleBoxTexture_vagxe")

[node name="Player" parent="." instance=ExtResource("3_bs5il")]
position = Vector2(179, 553)
scale = Vector2(4.08257, 4.08257)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -204.0
offset_right = 101.0
offset_bottom = -100.0
grow_vertical = 2
scale = Vector2(1.98228, 1.98228)
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_n1t7p")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_n1t7p")
text = "Options"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_n1t7p")
text = "   Level Select   "

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_n1t7p")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_top = 34.0
offset_right = 231.0
offset_bottom = 50.0
scale = Vector2(3, 3)
theme = ExtResource("3_n1t7p")
text = "Substance Zero"
label_settings = SubResource("LabelSettings_xpjht")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
